* configure.in: disable fdatasync again on Mac OS X.   [ruby-core:35493][Bug #4500]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@31232 b2dd03c8-39d4-4d8f-98ff-823fe69b080e